# vala

./: CMakeLists.txt  Makefile.am  configure.ac  meson.build  vala-config.h.in
ccode/: CCodeWriter.vala  CMakeLists.txt  meson.build  valaccodelinedirective.vala  valaccodewriter.vala
cmake/: Utils.cmake
cmake/vala/: UseVala.cmake
codegen/: CCodeAssignmentModule.vala  CCodeBaseModule.vala  CMakeLists.txt  meson.build  valaccodebasemodule.vala
compiler/: CMakeLists.txt
gee/: CMakeLists.txt  meson.build
gobject-introspection/: CMakeLists.txt  meson.build
libvaladoc/: meson.build
libvaladoc/highlighter/: iscanner.vala
tests/: CMakeLists.txt  meson.build
tests/structs/array_byvalue_copy/: CMakeLists.txt  array_byvalue_copy.vala  struct.vapi
vala/: CMakeLists.txt  Makefile.am  meson.build  valaflowanalyzer.vala
valadoc/: meson.build
valadoc/doclets/devhelp/: meson.build
valadoc/doclets/gtkdoc/: meson.build
valadoc/doclets/html/: meson.build
vapi/: CMakeLists.txt  meson.build
vapigen/: CMakeLists.txt  meson.build
vapigen/vala-gen-introspect/: meson.build
