set(VALA_SOURCES
	valaaddressofexpression.vala
	valaarraycopymethod.vala
	valaarraycreationexpression.vala
	valaarraylengthfield.vala
	valaarraymovemethod.vala
	valaarrayresizemethod.vala
	valaarraytype.vala
	valaassignment.vala
	valaattribute.vala
	valabaseaccess.vala
	valabasicblock.vala
	valabinaryexpression.vala
	valablock.vala
	valabooleanliteral.vala
	valabooleantype.vala
	valabreakstatement.vala
	valacallable.vala
	valacastexpression.vala
	valacatchclause.vala
	valacharacterliteral.vala
	valaclass.vala
	valaclasstype.vala
	valacodecontext.vala
	valacodegenerator.vala
	valacodenode.vala
	valacodevisitor.vala
	valacodewriter.vala
	valacomment.vala
	valagircomment.vala
	valaconditionalexpression.vala
	valaconstant.vala
	valaconstructor.vala
	valacontinuestatement.vala
	valacreationmethod.vala
	valadatatype.vala
	valadeclarationstatement.vala
	valadelegate.vala
	valadelegatetype.vala
	valadeletestatement.vala
	valadestructor.vala
	valadostatement.vala
	valadynamicmethod.vala
	valadynamicproperty.vala
	valadynamicsignal.vala
	valaelementaccess.vala
	valaemptystatement.vala
	valaenum.vala
	valaenumvalue.vala
	valaenumvaluetype.vala
	valaerrorcode.vala
	valaerrordomain.vala
	valaerrortype.vala
	valaexpression.vala
	valaexpressionstatement.vala
	valafield.vala
	valafieldprototype.vala
	valafloatingtype.vala
	valaflowanalyzer.vala
	valaforeachstatement.vala
	valaforstatement.vala
	valagirparser.vala
	valagenerictype.vala
	valagenieparser.vala
	valageniescanner.vala
	valagenietokentype.vala
	valaifstatement.vala
	valainitializerlist.vala
	valaintegerliteral.vala
	valaintegertype.vala
	valainterface.vala
	valainterfacetype.vala
	valainvalidtype.vala
	valalambdaexpression.vala
	valaliteral.vala
	valalocalvariable.vala
	valalockable.vala
	valalockstatement.vala
	valaloop.vala
	valamarkupreader.vala
	valamemberaccess.vala
	valamemberinitializer.vala
	valamethod.vala
	valamethodcall.vala
	valamethodtype.vala
	valanamedargument.vala
	valanamespace.vala
	valanullliteral.vala
	valanulltype.vala
	valaobjectcreationexpression.vala
	valaobjecttype.vala
	valaobjecttypesymbol.vala
	valaparameter.vala
	valaparser.vala
	valaphifunction.vala
	valapointerindirection.vala
	valapointertype.vala
	valapostfixexpression.vala
	valaprofile.vala
	valapropertyaccessor.vala
	valaproperty.vala
	valarealliteral.vala
	valareferencetransferexpression.vala
	valareferencetype.vala
	valaregexliteral.vala
	valareport.vala
	valareturnstatement.vala
	valascanner.vala
	valascope.vala
	valasemanticanalyzer.vala
	valasignal.vala
	valasignaltype.vala
	valasizeofexpression.vala
	valasliceexpression.vala
	valasourcefile.vala
	valasourcelocation.vala
	valasourcereference.vala
	valastatement.vala
	valastatementlist.vala
	valastringliteral.vala
	valastruct.vala
	valastructvaluetype.vala
	valasubroutine.vala
	valaswitchlabel.vala
	valaswitchsection.vala
	valaswitchstatement.vala
	valasymbol.vala
	valasymbolresolver.vala
	valatargetvalue.vala
	valatemplate.vala
	valathrowstatement.vala
	valatokentype.vala
	valatrystatement.vala
	valatuple.vala
	valatypecheck.vala
	valatypeofexpression.vala
	valatypeparameter.vala
	valatypesymbol.vala
	valaunaryexpression.vala
	valaunlockstatement.vala
	valaunresolvedsymbol.vala
	valaunresolvedtype.vala
	valausedattr.vala
	valausingdirective.vala
	valavaluetype.vala
	valavariable.vala
	valaversionattribute.vala
	valavoidtype.vala
	valawhilestatement.vala
	valayieldstatement.vala
)

set(MODULE_NAME vala)

set(VALA_VAPI_DIR ${CMAKE_CURRENT_BINARY_DIR} PARENT_SCOPE)
set(VALA_VAPI ${VALA_VAPI_DIR}/${MODULE_NAME}.vapi PARENT_SCOPE)

vala_precompile(VALA_C
	${VALA_SOURCES}
LIBRARY
	${MODULE_NAME}
PACKAGES
	gmodule-2.0
    gobject-2.0
	gee
	config
OPTIONS
	--vapidir ${VAPI_DIR}
	--vapidir ${GEE_VAPI_DIR}
	--use-header
GENERATE_VAPI
    ${VALA_VAPI}
GENERATE_HEADER
    ${MODULE_NAME}
)

add_library(${MODULE_NAME} ${VALA_C})
target_include_directories(${MODULE_NAME} PUBLIC
	${GEE_VAPI_DIR}
	${CCODE_VAPI_DIR}
)
target_link_libraries(${MODULE_NAME}
	${GLIB_LIBRARIES}
	${GOBJECT_LIBRARIES}
	${GMODULE_LIBRARIES}
	gee
)